--- a/src/templates/terminal/index.phtml
+++ b/src/templates/terminal/index.phtml
@@ -61,7 +61,7 @@
     <img src="images/x.png" alt="x"/> Нет соединения более 30 минут
     <img src="images/c.png" alt="с"/> Ошибка купюроприемника или принтера
     <img src="images/u.png" alt="u"/> Нет платежей более 3 часов
-</div><div style="padding-left: 20px" class="dataTables_filter"><label>Поиск: <input id="general_filter" aria-controls="example" type="text"></label></div> <br>
+</div><div style="padding-left: 15px; padding-top: 8px;" class="dataTables_filter"><label>Поиск: <input id="general_filter" aria-controls="example" type="text"></label></div> <br>
 <br>
 <div id="demo_gecko">
     <!---<table id="detail" style="width: 100%"></table><div id="pager_detail"></div>-->
