--- a/src/web/js/templates/add_table_row.ejs
+++ b/src/web/js/templates/add_table_row.ejs
@@ -4,8 +4,8 @@
 <td></td>
 </tr>
 <tr class="rasp<%= id %> rasp">
-   <td><label>Уведомлять, если платежей нет дольше:</label></td>
+   <td><label>Уведомлять, если платежей нет более:</label></td>
    <td><input type="text" class="from_till" id="time_input<%= id %>" name="max_time_from_pay<%= id %>"/> минут</td>
-   <td><a href="#" class="delete_setting" onclick="deleteTableRow(<%= id %>)">-Удалить эту настройку</a><br/>
+   <td><a href="#" class="delete_setting" onclick="deleteTableRow(<%= id %>)">Удалить эту настройку</a><br/>
        <a href="#" class="add_setting" onclick="addTableRow()">Добавить новую настройку</a></td>
 </tr>
