--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -593,7 +593,7 @@ img {
 }
 #move_but {
 	float: left;
-	margin: 40px 10px 10px 10px;
+	margin: 10px;
 }
 #terminals, #terminals_in_group {
 	width: 350px;
@@ -608,12 +608,12 @@ orm.group_name{
 }
 
 label.group_name {
-     font-size: 18px;
+     font-size: 16px;
      width:290px;
      float: left;
      text-align: right;
      clear:left;
-     color: #778899;
+     color: #2B547E;
 	 font-weight: bold;
 	 padding-top: 5px;
 }
