path to captcha fix

--- a/src/templates/user/login.phtml
+++ b/src/templates/user/login.phtml
@@ -29,7 +29,7 @@
                 <?php if($this->try >= 3): ?>
                 <div id="captcha-wrap">
                     <div class="captcha-box">
-                        <img src="/index.php?module=user&action=getCaptchaImage" alt="" id="captcha" />
+                        <img src="index.php?module=user&action=getCaptchaImage" alt="" id="captcha" />
                     </div>
                     <div class="text-box">
                         <label>Введите 2 слова:</label>
