--- a/src/web/js/templates/incashment.ejs
+++ b/src/web/js/templates/incashment.ejs
@@ -4,6 +4,8 @@
     <% if(hasOwnProperty('term_name') && term_name != '') { %>
     <h1>Данные инкассаций терминала <% if(hasOwnProperty('term_name')){ %><%= term_name %><% } %></h1>
     <hr style="clear: both"/> <br>
+    <div style="position: relative; top: 0px; width: 300px;" class="dataTables_filter"><label>Поиск:&nbsp;<input id="modal_filter" style="width: 200px;" aria-controls="example" type="text"></label></div>
+    <br><br>
     <table id="modal_bills" class="display">
         <thead><tr>
             <th width="10%">TERMINAL_DATE</th>
