--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -527,9 +527,10 @@ a.connect_status {
 }
 .terminal_errors {
 	color: red;
-	font-size: 1.2em;
 	font-weight: bold;
 	margin-top: 30px;
+	padding-left: 5px;
+	padding-top: 5px;
 }
 #bill_result {
 	color: red;
@@ -665,11 +666,13 @@ select.group_name {
 	float: right;
 	margin-top: 5px;
 	margin-bottom: 0px;
-	margin-right: 10px;
+	margin-right: 20px;
+	font-size:0.8em;
 }
 #colors_desc_bot {
 	float: right;
 	margin: -10px 10px 20px 0;
+	font-size:0.8em;
 	
 }
 .total_incass {
