--- a/src/templates/partials/_printErrors.phtml
+++ b/src/templates/partials/_printErrors.phtml
@@ -67,7 +67,7 @@ $current_time = time(); ?>
             foreach($this->Result as $element) {
 
                if ((int)$element['max_kup'] !=0 && $element['kupurs_count'] > (int)$element['max_kup']){
-                   echo '<div class="red_text"><a href="#" class="toomuch">На терминале ' . $element['PointName'] . '(' . $element['PointID'] . ')' .  ' превышено максимальное количество купюр. '.$element['kupurs_count'].' при максимуме ' . $element['max_kup'] . '</a></div>';}
+                   echo '<div class="red_text"><a href="#" class="toomuch">На терминале "' . $element['PointName'] . '" (' . $element['PointID'] . ')' .  ' превышено максимальное количество купюр. '.$element['kupurs_count'].' при максимуме ' . $element['max_kup'] . '</a></div>';}
            }
     endif;
     }  ?>
