--- a/src/web/js/templates/income.ejs
+++ b/src/web/js/templates/income.ejs
@@ -86,6 +86,7 @@
                     <td><%= row['commission'] %></td>
                 </tr>
             <% }); %>
+            <tr><td>Итого:</td><td><%= pays_amount %></td><td><%= summa %></td><td><%= commission %></td></tr>
             </tbody>
         </table>
         <% } %>
