--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -530,6 +530,7 @@ a.connect_status {
 	font-size: 1.2em;
 	font-weight: bold;
 	margin-top: 30px;
+    clear: both;
 }
 #bill_result {
 	color: red;
