--- a/src/web/js/templates/incashment.ejs
+++ b/src/web/js/templates/incashment.ejs
@@ -35,6 +35,7 @@
     <% } else { %>
     <h1>Данные инкассаций терминалов </h1>
     <hr style="clear: both"/>
+    <p class="green"> Общая сумма: <%= total_amount %> с <%= t_count %> терминалов</p>
     <div id="error_message"/></div>
     <table class=total_incass>
     <thead>
