--- a/src/web/js/templates/terminal_errors.ejs
+++ b/src/web/js/templates/terminal_errors.ejs
@@ -30,7 +30,7 @@
         <img src="images/search-icon.png" id="search_start"/></form></div>
     <div style="position: relative; left: 115px; top: -3px;" class="dataTables_filter"><label>Поиск: <input id="modal_filter" aria-controls="example" type="text"></label></div>
     <% } else {%>
-    <div style="position: relative; left: 30px; top: 10px;" class="dataTables_filter"><label>Поиск: <input id="modal_filter" aria-controls="example" type="text"></label></div>
+    <div style="position: relative; top: 10px;" class="dataTables_filter"><label>Поиск: <input id="modal_filter" aria-controls="example" type="text"></label></div>
     <% } %>
 
         <div style="clear: both"></div> <br>
