--- a/src/web/js/templates/income.ejs
+++ b/src/web/js/templates/income.ejs
@@ -47,11 +47,11 @@
                         <td colspan="2"><b>График:</b></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" id="pays_amount" class="graph_params" name="graph" value="1" <% if(hasOwnProperty('pays_amount') && pays_amount!=''){ %> checked <% } %>><label>&nbsp; Количество</label></td>
-                        <td><input type="checkbox" id="commission" class="graph_params" name="graph" value="3" <% if(hasOwnProperty('commission') && commission!=''){ %> checked <% } %>><label>&nbsp; Комиссия</label></td>
+                        <td><input type="checkbox" id="pays_amount" class="graph_params" name="graph" value="1" <% if(hasOwnProperty('pays_amount_value') && pays_amount_value!=''){ %> checked <% } %>><label>&nbsp; Количество</label></td>
+                        <td><input type="checkbox" id="commission" class="graph_params" name="graph" value="3" <% if(hasOwnProperty('commission_value') && commission_value!=''){ %> checked <% } %>><label>&nbsp; Комиссия</label></td>
                     </tr>
                     <tr>
-                        <td><input type="checkbox" id="summa" class="graph_params" name="graph" value="2" <% if(hasOwnProperty('summa') && summa!=''){ %> checked <% } %>><label>&nbsp; Сумма</label></td>
+                        <td><input type="checkbox" id="summa" class="graph_params" name="graph" value="2" <% if(hasOwnProperty('summa_value') && summa_value!=''){ %> checked <% } %>><label>&nbsp; Сумма</label></td>
                         <td><input type="checkbox" id="all" class="graph_params" name="graph" value="4" <% if(hasOwnProperty('all') && all!=''){ %> checked <% } %>><label>&nbsp; Общая</label></td>
                     </tr>
                 </table>
