--- a/src/templates/partials/_header.phtml
+++ b/src/templates/partials/_header.phtml
@@ -3,7 +3,7 @@
          <head>
              <meta charset="utf-8">
               <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-              <meta http-equiv="refresh" content="600">
+              <meta http-equiv="refresh" content="600;URL=index.php?update=0">
               <link rel="stylesheet" href="css/demo_page.css" type="text/css" />
               <link rel="stylesheet" href="css/demo_table.css" type="text/css" />
               <link rel="stylesheet" href="css/style.css" type="text/css" />
