rename one title

--- a/src/templates/admin/index.phtml
+++ b/src/templates/admin/index.phtml
@@ -43,7 +43,7 @@
                                 } ?>
 
                             </select>
-                            <p style="text-align: left; font-size: 10px">количество провайдеров:<?php echo(mssql_num_rows($agent)); ?></p>
+                            <p style="text-align: left; font-size: 10px">количество агентов:<?php echo(mssql_num_rows($agent)); ?></p>
                         </td>
                     </tr>
                     <tr>
