--- a/src/templates/partials/_header.phtml
+++ b/src/templates/partials/_header.phtml
@@ -10,9 +10,9 @@
               <link rel="stylesheet" type="text/css" media="screen" href="css/redmond/jquery-ui-1.10.3.custom.css" />
               <link rel="stylesheet" type="text/css" media="screen" href="css/ui.jqgrid.css" />
              <link rel="stylesheet" type="text/css" media="screen" href="css/jquery.ui.timepicker.css" />
-             <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
+             <script type="text/javascript" src="js/jquery-1.10.1.js"></script>
               <script type="text/javascript" src="js/ejs_production.js"></script>
-              <script type="text/javascript" src="http://yandex.st/json2/2011-10-19/json2.min.js"></script>
+              <script type="text/javascript" src="js/json2.min.js"></script>
               <script type="text/javascript" src="js/utils.js"></script>
               <script type="text/javascript" src="js/help_messages.js"></script>
          <?php if($this->environtment == 'terminal'): ?>
@@ -31,8 +31,8 @@
               <script type="text/javascript" src="http://jreject.turnwheel.com/js/jquery.reject.min.js"></script>
               <script src="js/jquery.maskedinput.min.js" type="text/javascript"></script>
               <script type="text/javascript" src="js/jquery.clipboard.js"></script>
-              <script src="http://jquery.bassistance.de/validate/jquery.validate.js"></script>
-              <script src="http://jquery.bassistance.de/validate/additional-methods.js"></script>
+              <script src="js/jquery.validate.js"></script>
+              <script src="js/additional-methods.js"></script>
               <script type="text/javascript" src="js/profileActions.js"></script>
               <title>regplat</title>
          </head>
