monet count output in template fix

--- a/src/web/js/templates/incashment.ejs
+++ b/src/web/js/templates/incashment.ejs
@@ -42,10 +42,10 @@
     <tr><th colspan="5">Купюры</th><th></th><th colspan="5">Монеты</th></tr>
     </thead>
        <tbody>
-          <tr><td>10</td><td>х</td><td><%= ten %> шт.</td><td>=</td><td><%= tenm*10 %> руб.</td><td class="empty"></td><td>1</td><td>х</td><td><%= one %> шт.</td><td>=</td><td><%= one %> руб.</td></tr>
+          <tr><td>10</td><td>х</td><td><%= ten %> шт.</td><td>=</td><td><%= ten*10 %> руб.</td><td class="empty"></td><td>1</td><td>х</td><td><%= one %> шт.</td><td>=</td><td><%= one %> руб.</td></tr>
           <tr><td>50</td><td>х</td><td><%= fifty %> шт.</td><td>=</td><td><%= fifty*50 %> руб.</td><td class="empty"></td><td>2</td><td>х</td><td><%= two %> шт.</td><td>=</td><td><%= two*2 %> руб.</td></tr>
           <tr><td>100</td><td>х</td><td><%= hundred %> шт.</td><td>=</td><td><%= hundred*100 %> руб.</td><td class="empty"></td><td>5</td><td>х</td><td><%= five %> шт.</td><td>=</td><td><%= five*5 %> руб.</td></tr>
-          <tr><td>500</td><td>х</td><td><%= fiveh %> шт.</td><td>=</td><td><%= fiveh*500 %> руб.</td><td class="empty"></td><td>10</td><td>х</td><td><%= ten %> шт.</td><td>=</td><td><%= ten*10 %> руб.</td></tr>
+          <tr><td>500</td><td>х</td><td><%= fiveh %> шт.</td><td>=</td><td><%= fiveh*500 %> руб.</td><td class="empty"></td><td>10</td><td>х</td><td><%= tenm %> шт.</td><td>=</td><td><%= tenm*10 %> руб.</td></tr>
           <tr><td>1000</td><td>х</td><td><%= onet %> шт.</td><td>=</td><td><%= onet*1000 %> руб.</td><td class="empty"></td><td></td><td></td></tr>
           <tr><td>5000</td><td>х</td><td><%= fivet %> шт.</td><td>=</td><td><%= fivet*5000 %> руб.</td><td class="empty"></td><td></td><td></td></tr>
        </tbody>
