--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -821,33 +821,33 @@ img.btn_close {
 	margin-top: -3px;
 }
 #empty1 {
-	width: 310px;
+	width: 330px;
 	text-align: right;
 	padding: 2px 10px 2px 5px;
-    color: #397f3d;
+    color: #2B547E;
 }
 #empty2 {
 	width: 400px;
 }
 #total_sum, #total_com, #total_total, #total_kupurs {
-	width: 63px;
+	width: 55px;
     padding: 2px 10px 2px 5px;
     text-align: right;
-    color: #397F3D;
+    color: #2B547E;
 }
 #total_pays {
-    width: 40px;
-    padding: 2px 10px 2px 5px;
+    width: 60px;
+    padding: 2px 2px 2px 10px;
     text-align: right;
-    color:#397F3D;
+    color:#2B547E;
 }
 #total_kupurs {
 	text-align: left;
 	}
 .green {
     font-weight: bold;
-    font-size: 1.1em;
-    color:#397F3D;
+    font-size: 1em;
+    color:#2B547E;
 }
 #graph_param {
 	width: 100%;
